[package]
name = "pleme-observability"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Observability library for Pleme platform - tracing, metrics, distributed tracing, and metric definition macros"
repository = "https://github.com/pleme-io/pleme-observability"
homepage = "https://github.com/pleme-io/pleme-observability"
readme = "README.md"
keywords = ["observability", "tracing", "metrics", "opentelemetry", "prometheus"]
categories = ["development-tools::debugging"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.29", optional = true }
opentelemetry = { version = "0.28", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["http-proto", "reqwest-client", "reqwest-rustls-webpki-roots", "trace"], optional = true }
prometheus = { version = "0.13", default-features = false }
tokio = { version = "1.41", features = ["rt-multi-thread"] }
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["tracing-basic", "metrics"]
tracing-basic = []
distributed-tracing = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
metrics = []
full = ["tracing-basic", "distributed-tracing", "metrics"]


